--- a/inventoli_app/package.json
+++ b/inventoli_app/package.json
@@ -7,8 +7,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-config": "^0.11.7",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-nfc-manager": "^1.2.2",
     "react-native-swipeout": "^2.3.6",
