--- a/inventoli_app/package.json
+++ b/inventoli_app/package.json
@@ -14,7 +14,8 @@
     "react-native-gesture-handler": "^1.3.0",
     "react-native-nfc-manager": "^1.2.2",
     "react-native-swipeout": "^2.3.6",
-    "react-navigation": "^3.11.0"
+    "react-navigation": "^3.11.0",
+    "react-scripts": "^3.0.1"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
