implemented update container, also included image picker to upload images, halfway implementing integration with aws s3. have fix react-config to use env

--- a/inventoli_app/.env
+++ b/inventoli_app/.env
@@ -1,1 +1,9 @@
-REACT_APP_API=http://192.168.2.230:3001/api/
+REACT_APP_api=http://192.168.2.230:3001/api/
+API_URL=http://192.168.2.230:3001/api/
+
+//AWS
+region=us-east-2
+userPoolId= us-east-2_8LNAWDhuO
+userPoolWebClientId=4toue0co4gvunrheujqei7kc6s
+identityPoolId=us-east-2:db0a54da-28c7-45ab-8348-db9ea493fdc9
+bucket_name=inventoli
