--- a/inventoli_app/package.json
+++ b/inventoli_app/package.json
@@ -7,11 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "aws-amplify": "^1.1.29",
     "axios": "^0.19.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-config": "^0.11.7",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-picker": "^0.28.1",
     "react-native-nfc-manager": "^1.2.2",
     "react-native-swipeout": "^2.3.6",
     "react-navigation": "^3.11.0",
