added image upload

--- a/inventoli_app/.env
+++ b/inventoli_app/.env
@@ -3,7 +3,7 @@ API_URL=http://192.168.2.230:3001/api/
 
 //AWS
 region=us-east-2
-userPoolId= us-east-2_8LNAWDhuO
-userPoolWebClientId=4toue0co4gvunrheujqei7kc6s
-identityPoolId=us-east-2:db0a54da-28c7-45ab-8348-db9ea493fdc9
-bucket_name=inventoli
+userPoolId= us-east-2_a4ao1pxPA
+userPoolWebClientId=30eliqt89nqsf7fc723ef8e4ps
+identityPoolId=us-east-2:aa4d0fc3-0a7b-4853-9e71-9ff773215c99
+bucket_name=inventoli-env
