--- a/inventoli_app/android/app/build.gradle
+++ b/inventoli_app/android/app/build.gradle
@@ -141,6 +141,7 @@ android {
 }
 
 dependencies {
+    implementation project(':rn-fetch-blob')
     implementation project(':react-native-config')
     implementation project(':react-native-image-picker')
     implementation project(':react-native-nfc-manager')
