--- a/inventoli_app/package.json
+++ b/inventoli_app/package.json
@@ -8,7 +8,10 @@
   },
   "dependencies": {
     "aws-amplify": "^1.1.29",
+    "aws-amplify-react-native": "^2.1.14",
     "axios": "^0.19.0",
+    "buffer": "^5.2.1",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-native": "0.59.8",
     "react-native-config": "^0.11.7",
@@ -17,7 +20,9 @@
     "react-native-nfc-manager": "^1.2.2",
     "react-native-swipeout": "^2.3.6",
     "react-navigation": "^3.11.0",
-    "react-scripts": "^3.0.1"
+    "react-scripts": "^3.0.1",
+    "rn-fetch-blob": "^0.10.15",
+    "uuid": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.4.5",
